--- a/index.html
+++ b/index.html
@@ -8,5 +8,14 @@
 <body>
     <h1>Mission用のページです</h1>
     <img src="http://127.0.0.1:5000/" referrerpolicy="unsafe-url"　width="1" height="1" style="display: none;">
+    
+    <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+<df-messenger
+  intent="WELCOME"
+  chat-title="HelloworkAI"
+  agent-id="a0442489-e8f1-40c8-9236-40699225665c"
+  language-code="ja"
+></df-messenger>
+    
 </body>
 </html>
