--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Mission</title>
 </head>
 <body>
-    <h1>Mission用のページです</h1>
+    <h1>テスト用のページです</h1>
     <img src="http://127.0.0.1:5000/" referrerpolicy="unsafe-url"　width="1" height="1" style="display: none;">
     
     <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
