--- a/index.html
+++ b/index.html
@@ -9,14 +9,7 @@
     <h1>テスト用のページです</h1>
     <img src="http://127.0.0.1:5000/" referrerpolicy="unsafe-url"　width="1" height="1" style="display: none;">
     
-    <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
-<df-messenger
-  intent="WELCOME"
-  chat-title="HelloworkAI"
-  agent-id="a0442489-e8f1-40c8-9236-40699225665c"
-  language-code="ja"
-  chat-icon="https://appimg.chatplus.jp/app/16980/agents/agent_1.png"
-></df-messenger>
+<script>var BotStar={appId:"sba53d7c4-f17c-4f31-a2f6-0a932a569a74",mode:"livechat"};!function(t,a){var e=function(){(e.q=e.q||[]).push(arguments)};e.q=e.q||[],t.BotStarApi=e;!function(){var t=a.createElement("script");t.type="text/javascript",t.async=1,t.src="https://widget.botstar.com/static/js/widget.js";var e=a.getElementsByTagName("script")[0];e.parentNode.insertBefore(t,e)}();}(window,document)</script>
     
 </body>
 </html>
