--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <h1>テスト用のページです</h1>
     <img src="http://127.0.0.1:5000/" referrerpolicy="unsafe-url"　width="1" height="1" style="display: none;">
     
+    <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/embed/v2.js"></script>
+<script>
+  hbspt.forms.create({
+    region: "na1",
+    portalId: "19924397",
+    formId: "bd2b1b9f-8771-406f-a225-42675db8fd4f"
+  });
+</script>
+    
   
 </body>
 </html>
