--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     portalId: "19924397",
     formId: "bd2b1b9f-8771-406f-a225-42675db8fd4f"
   });
+    document.getElementById("firstname-bd2b1b9f-8771-406f-a225-42675db8fd4f").value="テスト";
 </script>
     
   
