--- a/index.html
+++ b/index.html
@@ -9,16 +9,7 @@
     <h1>テスト用のページです</h1>
     <img src="http://127.0.0.1:5000/" referrerpolicy="unsafe-url"　width="1" height="1" style="display: none;">
     
-    <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/embed/v2.js"></script>
-<script>
-  hbspt.forms.create({
-    region: "na1",
-    portalId: "19924397",
-    formId: "bd2b1b9f-8771-406f-a225-42675db8fd4f"
-  });
-    document.getElementById("firstname-bd2b1b9f-8771-406f-a225-42675db8fd4f").value="テスト";
-</script>
-    
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSffEYRCuG2eEtn9o_LknM4QHg2ZKgltCSFLjwlzI_UIdpDKvQ/viewform?embedded=true&usp=pp_url&entry.154550357=%E3%81%82%E3%81%82%E3%81%82" width="640" height="652" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
   
 </body>
 </html>
