--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     portalId: "19924397",
     formId: "bd2b1b9f-8771-406f-a225-42675db8fd4f"
   });
-</script>
-<script>
-    document.getElementById("firstname-bd2b1b9f-8771-406f-a225-42675db8fd4f").value="あああ";
+  hbspt.forms.onFormReady(function(form) {
+    form.querySelector("#firstname-bd2b1b9f-8771-406f-a225-42675db8fd4f").value = "あああ";
+  });
 </script>
     
 </body>
