--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
     region: "na1",
     portalId: "19924397",
     formId: "bd2b1b9f-8771-406f-a225-42675db8fd4f"
-    onFormReady: function($form) {
-        $form.find('input[name="profile"]').val("value-to-populate");
+    fields: {
+        'title': 'value-to-title',
+        'person': 'value-to-person'
+    }
+    console.log('更新
   });
 </script>
     
