--- a/index.html
+++ b/index.html
@@ -9,7 +9,33 @@
     <h1>テスト用のページです</h1>
     <img src="http://127.0.0.1:5000/" referrerpolicy="unsafe-url"　width="1" height="1" style="display: none;">
     
-<iframe data-tally-src="https://tally.so/embed/wbZzB0?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1&title=テスト１&person=テスト２" loading="lazy" width="100%" height="420" frameborder="0" marginheight="0" marginwidth="0" title="💼 Hiring OS - hiring form template"></iframe><script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if("undefined"!=typeof Tally)v();else if(d.querySelector('script[src="'+w+'"]')==null){var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
+    <iframe 
+    data-tally-src="https://tally.so/embed/wbZzB0?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1&title=テスト１&person=テスト２" 
+    loading="lazy" 
+    width="100%" 
+    height="420" 
+    frameborder="0" 
+    marginheight="0" 
+    marginwidth="0" 
+    title="💼 Hiring OS - hiring form template">
+</iframe>
+<script>
+    var d = document,
+        w = "https://tally.so/widgets/embed.js",
+        v = function() {
+            "undefined" != typeof Tally ? Tally.loadEmbeds() : d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e) {
+                e.src = e.dataset.tallySrc
+            }))
+        };
+    if ("undefined" != typeof Tally) v();
+    else if (d.querySelector('script[src="' + w + '"]') == null) {
+        var s = d.createElement("script");
+        s.src = w,
+            s.onload = v,
+            s.onerror = v,
+            d.body.appendChild(s);
+    }
+</script>
     
 </body>
 </html>
