--- a/index.html
+++ b/index.html
@@ -9,33 +9,7 @@
     <h1>テスト用のページです</h1>
     <img src="http://127.0.0.1:5000/" referrerpolicy="unsafe-url"　width="1" height="1" style="display: none;">
     
-    <iframe 
-    data-tally-src="https://tally.so/embed/wbZzB0?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1&title=テスト１&person=テスト２" 
-    loading="lazy" 
-    width="100%" 
-    height="420" 
-    frameborder="0" 
-    marginheight="0" 
-    marginwidth="0" 
-    title="💼 Hiring OS - hiring form template">
-</iframe>
-<script>
-    var d = document,
-        w = "https://tally.so/widgets/embed.js",
-        v = function() {
-            "undefined" != typeof Tally ? Tally.loadEmbeds() : d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e) {
-                e.src = e.dataset.tallySrc
-            }))
-        };
-    if ("undefined" != typeof Tally) v();
-    else if (d.querySelector('script[src="' + w + '"]') == null) {
-        var s = d.createElement("script");
-        s.src = w,
-            s.onload = v,
-            s.onerror = v,
-            d.body.appendChild(s);
-    }
-</script>
+    <iframe src=“https://docs.google.com/forms/d/e/1FAIpQLSffEYRCuG2eEtn9o_LknM4QHg2ZKgltCSFLjwlzI_UIdpDKvQ/viewform?embedded=true&entry.1437301239=%E3%83%86%E3%82%B9%E3%83%88%E3%81%AE%E9%9D%A2%E8%AB%87%E3%82%BF%E3%82%A4%E3%83%88%E3%83%AB&entry.82001331=junjun” width=“640" height=“912” frameborder=“0" marginheight=“0” marginwidth=“0">読み込んでいます…</iframe>
     
 </body>
 </html>
